# noise

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: johnson_noise.ipynb
src/noise/: __init__.py  chain.py  components.py  constants.py  johnson.py
src/noise/plotting/: __init__.py  chain_plot.py
tests/: test_components.py  test_johnson.py
