[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "noise"
version = "0.1.0"
description = "Noise calculator for quantum device readout chains"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
